// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`position: absolute: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "position": {
      "setterCode": "setStylePosition(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute")",
    },
  },
}
`;

exports[`position: absolute: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "position": {
      "setterCode": "position(UTSCPP.propertyAccess(UniNativePositionType, "::", "Absolute"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativePositionType, "::", "Absolute")",
    },
  },
}
`;

exports[`position: fixed: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "position": {
      "setterCode": "setStylePosition(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Fixed"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Fixed")",
    },
  },
}
`;

exports[`position: fixed: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "position": {
      "setterCode": "position(UTSCPP.propertyAccess(UniNativePositionType, "::", "Fixed"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativePositionType, "::", "Fixed")",
    },
  },
}
`;

exports[`position: relative: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "position": {
      "setterCode": "setStylePosition(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Relative"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Relative")",
    },
  },
}
`;

exports[`position: relative: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "position": {
      "setterCode": "position(UTSCPP.propertyAccess(UniNativePositionType, "::", "Relative"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativePositionType, "::", "Relative")",
    },
  },
}
`;

exports[`position: static: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "position",
        "important": false,
        "prop": "position",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "static",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`static\` is not supported for \`position\` (supported values are: \`relative\`|\`absolute\`|\`fixed\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`position: static: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "position",
        "important": false,
        "prop": "position",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "static",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`static\` is not supported for \`position\` (supported values are: \`relative\`|\`absolute\`|\`fixed\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`position: sticky: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "position",
        "important": false,
        "prop": "position",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "sticky",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`sticky\` is not supported for \`position\` (supported values are: \`relative\`|\`absolute\`|\`fixed\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`position: sticky: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "position",
        "important": false,
        "prop": "position",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "sticky",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`sticky\` is not supported for \`position\` (supported values are: \`relative\`|\`absolute\`|\`fixed\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;
